# keras-ocr-cpp

./: .gitignore  LICENSE  README.md
keras_ocr/: CMakeLists.txt  containers.h  detector.h  keras_ocr.cpp  keras_ocr.h  pipeline.h  recognizer.h  utils.h
models/: .gitignore
